made about.html responsive

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="text">
             Welcome to the Cafe!
         </div>
-        <a href="" class="btn">Explore</a>
+        <a href="./about.html#footer" class="btn">Explore</a>
     </div>       
     </div>
     <!-- Hero Section Ends -->
