--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
      <div class="navbar">
         <div class="logo">
             <div class="logoImg">
-                <a href="./about.html#home"> <img src="assets\sign (1).png" alt=""></a> 
+                <a href="./index.html#home"> <img src="assets\sign (1).png" alt=""></a> 
             </div>
             <div class="logoText">CAFE</div>
         </div>
@@ -58,13 +58,12 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore rem beatae blanditiis repellat minus, doloribus quaerat placeat ab, itaque necessitatibus sit voluptatem ad ratione. Ipsam facere maiores atque molestias voluptatibus?
             Totam dolor quas eligendi odio incidunt debitis deserunt aliquid consequuntur eaque similique asperiores dicta, accusantium consequatur tenetur, voluptatem iure fuga eos ducimus! Odio incidunt provident voluptates sit, voluptas dolorum ea.
             Deleniti nesciunt molestiae magni illum dolor, delectus id, rerum inventore ea odio velit voluptatem dicta totam incidunt repellendus quaerat. Perspiciatis iusto nisi in. Iusto dolorum dolores, quia sunt iste quae.
-            Molestiae quae a similique id officia, eius, facilis qui totam, animi laudantium velit ducimus aut ab repellat et. Debitis incidunt excepturi perspiciatis perferendis numquam animi ut rerum totam nostrum ab.</p>
-        </div>
+           </div>
     </div>
 
-    <footer>
+    <footer id="footer">
         <div class="footer">
-            <div class="content">
+            <div class="content1">
                 <h2>Get In Touch!</h2>
                 <p>Phone : +91 8000800080</p>
                 <div class="icon">
@@ -72,15 +71,18 @@
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-facebook-square"></i>
                 </div>
+            </div>
+
+            <div class="content2">
                 <div class="address">
-                    <div class="addTitle">Address</div>
+                    <div class="addTitle">Address :</div>
                     <div class="addContent">
                         <p>52, Enclave Colony  </p>
                         <p>Indore, M.P 450031</p>
                     </div>
                 </div>
-               
             </div>
+
             <div class="name">
                 <div>CAFE</div>
                 <div>Good days start with coffee and you!</div>
